SERVER-14835 Fixed alignment check in log file for PPC64

Closes #769

Signed-off-by: Benety Goh <benety@mongodb.com>